  * Issue #1500: Use ISO 8601 basic format in the snapshot
    naming schema because Windows does not support `:` in
    file names. Note that due to this change, earlier snapshots
    with the ISO 8601 extended format are no longer listed under
    Windows in `Previous Versions`. Please delete and recreate
    scheduled snapshot tasks as well.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Feb 2023 01:39:54 +0100

openmediavault (6.3.1-1) stable; urgency=low

  * Update locale files.
  * Issue #1489: Add UI to manage scheduled snapshots of shared
    folders.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 14 Feb 2023 18:02:33 +0100

openmediavault (6.3.0-2) stable; urgency=low

  * Add an infrastructure to allow plugins to append additional
    file systems to the file system creation page in the UI.
  * Enhance the BTRFS file system creation page by adding support
    of profiles to create various RAID levels.
  * Issue #1241: Use BTRFS subvolumes for shared folders on BTRFS
    file systems. Snapshots can be created per shared folder.
    The snapshot management UI allows to create and delete those
    snapshots. A restore feature has not been implemented by
    intention because those shared folders need to be unreferenced
    from every service beforehand. Instead a shared folders should
    be created from these snapshots, which is a less error-prone
    approach. The snapshots are stored in the `.snapshots` folder
    in the root subvolume of the BTRFS file system.
  * Issue #1490: Support SMB shadow copies for shared folders that
    are located on a BTRFS file system.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 31 Jan 2023 12:31:57 +0100

openmediavault (6.2.0-2) stable; urgency=low

  * Relocate FTP service into a separate plugin. Please install
    the plugin if you are using the service. The configuration
    will be migrated.
  * Lock the database during the deployment of the configurations.
